[tool.poetry]
name = "megalinter"
version = "0.1.0"
description = ""
authors = ["Nicolas Vuillamy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
gitpython = "^3.1.31"
jsonschema = "^4.17.3"
jsonpickle = "^3.0.1"
mkdocs = "^1.4.2"
multiprocessing-logging = "^0.3.4"
pychalk = "^2.0.1"
pygithub = "^1.58.1"
commentjson = "^0.9.0"
pytablewriter = "^0.64.2"
pytest-cov = "^4.0.0"
pytest-timeout = "^2.1.0"
pytest-xdist = "^3.2.1"
python-gitlab = "^3.13.0"
pyyaml = "^6.0"
regex = "^2023.3.23"
requests = "^2.28.2"
terminaltables = "^3.1.10"
webpreview = "^1.7.2"
yq = "^3.1.1"
importlib-metadata = ">=3.10"
mkdocs-material = "^9.1.5"
mkdocs-glightbox = "^0.3.2"
mdx-truly-sane-lists = "^1.3"
beautifulsoup4 = "^4.12.0"
giturlparse = "^0.10.0"
json-schema-for-humans = "^0.44.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
